fix text wrap

--- a/src/app/components/instance.component.css
+++ b/src/app/components/instance.component.css
@@ -58,4 +58,5 @@ app-item.instance-disabled {
   display: flex;
   align-items: center;
   justify-content: center;
+  white-space: nowrap;
 }
